Changed BASE64 sun classes to Java API ones